deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buoy
  namespace: buoy-system
  labels:
    app: buoy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: buoy
